# api/server/v1/models/device.go
@@ -1,0 +1,72 @@
+package models
+
+import "time"
+
+type NewDevice struct {
+	Id          int64  `json:"id"`
+	DeviceId    *int64 `json:"device_id"`
+	NodeId      *int64  `json:"node_id"`
+	Address     *int   `json:"address"`
+	Baud        int    `json:"baud"`
+	Sleep       int64  `json:"sleep"`
+	Description string `json:"description"`
+	Name        string `json:"name"`
+	Status      string `json:"status"`
+	StopBite    int64  `json:"stop_bite"`
+	Timeout     int64  `json:"timeout"`
+	Tty         string `json:"tty"`
+	IsGroup     bool   `json:"is_group"`
+}
+
+type UpdateDevice struct {
+	Id          int64  `json:"id"`
+	DeviceId    *int64 `json:"device_id"`
+	NodeId      *int64  `json:"node_id"`
+	Address     *int   `json:"address"`
+	Baud        int    `json:"baud"`
+	Sleep       int64  `json:"sleep"`
+	Description string `json:"description"`
+	Name        string `json:"name"`
+	Status      string `json:"status"`
+	StopBite    int64  `json:"stop_bite"`
+	Timeout     int64  `json:"timeout"`
+	Tty         string `json:"tty"`
+	IsGroup     bool   `json:"is_group"`
+}
+
+type Device struct {
+	Id          int64     `json:"id"`
+	DeviceId    *int64    `json:"device_id"`
+	NodeId      *int64     `json:"node_id"`
+	Address     *int      `json:"address"`
+	Baud        int       `json:"baud"`
+	Sleep       int64     `json:"sleep"`
+	Description string    `json:"description"`
+	Name        string    `json:"name"`
+	Status      string    `json:"status"`
+	StopBite    int64     `json:"stop_bite"`
+	Timeout     int64     `json:"timeout"`
+	Tty         string    `json:"tty"`
+	IsGroup     bool      `json:"is_group"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
+}
+
+type Devices []*Device
+
+type ResponseDevice struct {
+	Code ResponseType `json:"code"`
+	Data struct {
+		Device *Device `json:"device"`
+	} `json:"data"`
+}
+
+type ResponseDeviceList struct {
+	Code ResponseType `json:"code"`
+	Data struct {
+		Items  []*Device `json:"items"`
+		Limit  int64     `json:"limit"`
+		Offset int64     `json:"offset"`
+		Total  int64     `json:"total"`
+	} `json:"data"`
+}
