# models/device_state.go
@@ -1,0 +1,12 @@
+package models
+
+import "time"
+
+type DeviceState struct {
+	Id          int64     `json:"id"`
+	Device      *Device   `json:"device"`
+	Description string    `json:"description"`
+	SystemName  string    `json:"system_name"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
+}
